Lock while setting log lines.
Fixed small probability of updates overlapping.